new update, moves

--- a/correlation_game.css
+++ b/correlation_game.css
@@ -55,7 +55,12 @@
 	font-size: 0.9em;
 }
 
-#statlist{
+.moves{
+	font-family: Arial, sans-serif;
+	font-size: 0.9em;
+}
+
+.statlist{
 	list-style-type:none;
 }
 
