--- a/styling.css
+++ b/styling.css
@@ -19,4 +19,17 @@ h2 {
 	margin-left: auto;
 	margin-right: auto;
 	width: 500px;
+	overflow: hidden;
+}
+
+#container.textContent {
+	font-size: 9px;
+	font-family: sans-serif;
+}
+
+.innerdiv {
+	width: 120;
+	height: 100;
+	float: left;
+	overflow: hidden;
 }
