--- a/statapps/mosaic_plot/mosaic_plot.css
+++ b/statapps/mosaic_plot/mosaic_plot.css
@@ -37,12 +37,13 @@
 	list-style-type:none;
 }
 
-#mainbody{
+.mainbody{
 	position: relative;
-    width: 700px;
+    width: 460px;
     margin-left: auto ;
     margin-right: auto ;
 	display: block;
+	
 }
 
 
@@ -59,21 +60,27 @@
 }
 
 #displayPanel{
-	position: relative;
-	width: 450px;
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
+	overflow: hidden;
 }
 
 
 #dataTable{
-	border:1px solid black;
+	border:1px solid lightGray;
+	margin-left: auto;
+	margin-right: auto;
+	width: 190px;
 }
+
 
 #marginalProbX, #marginalProbXc {
 	text-anchor: middle;
 	fill: white;
 	font-family: sans-serif;
 	font-size: 16;
+}
+
+#infoText{	
+	width: 450px;
+	font-family: sans-serif;
+	font-size: 0.75em;
 }
