--- a/statapps/linear_regression/linear_regression.css
+++ b/statapps/linear_regression/linear_regression.css
@@ -4,11 +4,6 @@
 	font-size: 0.9em;
 }
 
-.chart text{
-	fill: white;
-	font: 10px sans-serif;
-	text-anchor: middle;
-}
 
 .axis path,
 .axis line {
@@ -18,6 +13,7 @@
 }
 
 .axis text {
+	fill: black;
     font-family: sans-serif;
     font-size: 11px;
 }
@@ -36,7 +32,7 @@
 	fill-opacity: 0.5;
 }
 
-#chart{
+.chart{
 	display: block;
 	clear: both;
 	margin-left: auto;
