--- a/statapps/correlation_game_edit/correlation_game.css
+++ b/statapps/correlation_game_edit/correlation_game.css
@@ -4,35 +4,10 @@
 	font-size: 0.9em;
 }
 
-.paragraphText2 {
-	font-family: sans-serif;
-	font-size: 0.9em;
-	font-weight: bold;
-}
-
-
 .chart text{
-	fill: black;
-	font: 14px sans-serif;
+	fill: white;
+	font: 10px sans-serif;
 	text-anchor: middle;
-}
-
-rect.box {
-	fill: white;
-	stroke-width: 1px;
-	stroke: black;
-}
-
-circle.outlier {
-	fill: white;
-	stroke-width: 1px;
-	stroke: black;
-}
-
-.bar  {
-  fill: steelblue;
-  shape-rendering: crispEdges;
-  fill-opacity: 0.3;
 }
 
 .axis path,
@@ -61,7 +36,7 @@ circle.outlier {
 	fill-opacity: 0.5;
 }
 
-.chart{
+#chart{
 	display: block;
 	clear: both;
 	margin-left: auto;
@@ -89,7 +64,7 @@ circle.outlier {
 	list-style-type:none;
 }
 
-.mainbody{
+#mainbody{
 	position: relative;
     width: 460px;
     margin-left: auto ;
@@ -98,19 +73,16 @@ circle.outlier {
 }
 
 
-
-
+#statdiv{
+	display: block;
+	width: 200px;
+	float: right;
+}
 #controlpanel{
-	width: 450px;
+	width: 200px;
 	float: left;
 }
 
 #displayPanel{
 	overflow: hidden;
-}
-
-#infoText{	
-	width: 450px;
-	font-family: sans-serif;
-	font-size: 0.75em;
 }
