--- a/statapps/mosaic_plot/mosaic_plot.css
+++ b/statapps/mosaic_plot/mosaic_plot.css
@@ -4,6 +4,13 @@
 	font-size: 0.9em;
 }
 
+.paragraphText2 {
+	font-family: sans-serif;
+	font-size: 0.9em;
+	font-weight: bold;
+}
+
+
 #heading{
 	margin-left:auto;
 	margin-right:auto;
@@ -66,9 +73,8 @@
 
 #dataTable{
 	border:1px solid lightGray;
-	margin-left: auto;
-	margin-right: auto;
-	width: 190px;
+	float: left;	
+	width: 150px;
 }
 
 
