--- a/statapps/correlation_game_edit/correlation_game.css
+++ b/statapps/correlation_game_edit/correlation_game.css
@@ -3,11 +3,10 @@
 	font-family: sans-serif;
 	font-size: 0.9em;
 }
-
-.chart text{
-	fill: white;
-	font: 10px sans-serif;
-	text-anchor: middle;
+.paragraphText2 {
+	font-family: sans-serif;
+	font-size: 0.9em;
+	font-weight: bold;
 }
 
 .axis path,
@@ -18,6 +17,7 @@
 }
 
 .axis text {
+	fill: black;
     font-family: sans-serif;
     font-size: 11px;
 }
@@ -36,7 +36,7 @@
 	fill-opacity: 0.5;
 }
 
-#chart{
+.chart{
 	display: block;
 	clear: both;
 	margin-left: auto;
@@ -64,7 +64,7 @@
 	list-style-type:none;
 }
 
-#mainbody{
+.mainbody{
 	position: relative;
     width: 460px;
     margin-left: auto ;
@@ -75,14 +75,22 @@
 
 #statdiv{
 	display: block;
-	width: 200px;
+	width: 100px;
 	float: right;
 }
+
 #controlpanel{
-	width: 200px;
+	width: 350px;
 	float: left;
 }
 
 #displayPanel{
 	overflow: hidden;
 }
+
+#infoText{	
+	width: 450px;
+	font-family: sans-serif;
+	font-size: 0.75em;
+}
+
