--- a/statapps/cond_prob/cond_prob.css
+++ b/statapps/cond_prob/cond_prob.css
@@ -1,3 +1,13 @@
+.paragraphText {
+	font-family: sans-serif;
+	font-size: 0.9em;
+}
+
+.paragraphText2 {
+	font-family: sans-serif;
+	font-size: 0.9em;
+	font-weight: bold;
+}
 
 .axis .domain {
   fill: none;
@@ -90,4 +100,17 @@
 
 #dataTable{
 	padding: 2px;
+}
+
+#infoText{	
+	width: 450px;
+	font-family: sans-serif;
+	font-size: 0.75em;
+}
+
+
+#cat{
+    width: 460px;
+    margin-left: auto ;
+    margin-right: auto ;
 }
